--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+    <!--项目的groupId，用于唯一标识项目所属的组织或团队-->
     <groupId>com.atguigu.gulimall</groupId>
+    <!--项目的artifactId，用于唯一标识项目的名称-->
     <artifactId>gulimall</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>gulimall</name>
     <description>聚合服务</description>
     <packaging>pom</packaging>
+
+
+    <modules>
+        <module>gulimall-coupon</module>
+        <module>gulimall-member</module>
+        <module>gulimall-order</module>
+        <module>gulimall-product</module>
+        <module>gulimall-ware</module>
+        <!--        <module>renren-fast</module>-->
+        <!--        <module>renren-generator</module>-->
+        <module>gulimall-common</module>
+    </modules>
 
     <build>
         <plugins>
@@ -23,18 +38,5 @@
             </plugin>
         </plugins>
     </build>
-
-    <modules>
-        <module>gulimall-coupon</module>
-        <module>gulimall-member</module>
-        <module>gulimall-order</module>
-        <module>gulimall-product</module>
-        <module>gulimall-ware</module>
-<!--        <module>renren-fast</module>-->
-<!--        <module>renren-generator</module>-->
-        <module>gulimall-common</module>
-    </modules>
-
-
 
 </project>
