商品服务-API-三级分类-查询-递归树形结构数据获取

--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,12 @@ buildNumber.properties
 
 ### IntelliJ IDEA ###
 .idea
+gulimall.iml
+**/rebel.xml
+**/gulimall-*.iml
 
 ### Git ###
 **/.gitignore
 
 ### 配置文件 ###
+gulimall-third-party/src/main/resources/application.yml
