--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
         <module>gulimall-ware</module>
         <module>gulimall-gateway</module>
         <module>gulimall-common</module>
+        <module>renren-fast</module>
+        <module>renren-generator</module>
     </modules>
 
 
