--- a/gulimall-product/src/main/resources/bootstrap.properties
+++ b/gulimall-product/src/main/resources/bootstrap.properties
@@ -1,4 +1,7 @@
+# 应用名称
 spring.application.name=gulimall-product
 
+# Nacos配置服务的地址
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
-spring.cloud.nacos.config.namespace=187171bd-37a2-4188-b92b-db960010a40f
+# Nacos配置服务的命名空间
+spring.cloud.nacos.config.namespace=8224f5ee-52b0-4225-85b0-7090d15d35be
