--- a/gulimall-product/src/main/resources/application.yml
+++ b/gulimall-product/src/main/resources/application.yml
@@ -1,27 +1,35 @@
+# Spring配置
 spring:
+  # 数据源配置
   datasource:
-    username: root
-    password: root
-    url: jdbc:mysql://192.168.56.10:3306/gulimall_pms
-    driver-class-name: com.mysql.jdbc.Driver
+    username: root # 数据库用户名
+    password: root # 数据库密码
+    url: jdbc:mysql://192.168.56.10:3306/gulimall_pms # 数据库连接URL
+    driver-class-name: com.mysql.jdbc.Driver # 数据库驱动类名
+  # 云配置，这里配置Nacos服务发现
   cloud:
     nacos:
       discovery:
-        server-addr: 127.0.0.1:8848
+        server-addr: 127.0.0.1:8848 # Nacos服务器地址和端口
+  # Jackson配置，用于日期格式化
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
 
-
+# MyBatis Plus配置
 mybatis-plus:
-  mapper-locations: classpath:/mapper/**/*.xml
+  mapper-locations: classpath:/mapper/**/*.xml # Mapper文件位置
   global-config:
     db-config:
-      id-type: auto
-      logic-delete-value: 1
-      logic-not-delete-value: 0
+      # 数据库配置
+      id-type: auto # 主键类型
+      logic-delete-value: 1 # 逻辑删除值
+      logic-not-delete-value: 0 # 逻辑未删除值
+
+# 服务器配置
 server:
-  port: 10000
+  port: 10000 # 服务器端口
+
+# 日志配置
 logging:
   level:
-    com.atguigu.gulimall: debug
-
+    com.atguigu.gulimall: debug # 指定包的日志级别为debug
