--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>gulimall-product</module>
         <module>gulimall-third-party</module>
         <module>gulimall-ware</module>
+        <module>gulimall-search</module>
         <module>renren-fast</module>
         <module>renren-generator</module>
     </modules>
