商城业务-商品上架-抽取响应结果

--- a/gulimall-gateway/src/main/resources/bootstrap.properties
+++ b/gulimall-gateway/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
-spring.application.name=gulimall-coupon
+spring.application.name=gulimall-gateway
 
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 spring.cloud.nacos.config.namespace=9b85d2d5-4f44-4b80-92d7-731644c6be04
