--- a/gulimall-search/src/main/resources/application.yml
+++ b/gulimall-search/src/main/resources/application.yml
@@ -1,13 +1,13 @@
-#server:
-#  port: 12000
-#
-#spring:
-#  application:
-#    name: gulimall-search
-#  cloud:
-#    nacos:
-#      discovery:
-#        server-addr: localhost:8848
+server:
+  port: 12000
+
+spring:
+  application:
+    name: gulimall-search
+  cloud:
+    nacos:
+      discovery:
+        server-addr: localhost:8848
 #
 #    sentinel:
 #      transport:
@@ -29,13 +29,20 @@
 #  session:
 #    store-type: redis
 #
-#logging:
-#  level:
-#    com.xunqi.gulimall.search: debug
-#    root: warn
+# 配置日志信息
+logging:
+  # 设置日志级别
+  level:
+    # 设置包com.atguigu.gulimall.search的日志级别为debug
+    com.atguigu.gulimall.search: debug
+    # 设置根日志级别的级别为warn
+    root: warn
+#  # 配置日志输出格式
 #  pattern:
+#    # 配置控制台日志输出格式
 #    console: "%d{yyyy-MM-dd} [%thread] - %msg%n"
-#
+
+
 ##暴露所有端点
 #management:
 #  endpoints:
