--- a/gulimall-product/pom.xml
+++ b/gulimall-product/pom.xml
@@ -76,12 +76,25 @@
             <artifactId>jedis</artifactId>
         </dependency>
 
+        <!-- Redisson客户端依赖，用于Java客户端与Redis服务器之间的通信 -->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.12.0</version>
+        </dependency>
 
-        <!-- Spring Boot Actuator依赖，用于提供应用监控和管理的端点 -->
+        <!-- Spring Boot Cache依赖，用于实现缓存功能 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+
+        <!-- Spring Boot Actuator依赖，用于提供应用监控和管理的端点，包括健康检查、指标、审计等 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+
     </dependencies>
     <!-- 依赖管理结束 -->
 
