--- a/gulimall-product/src/main/resources/application.properties
+++ b/gulimall-product/src/main/resources/application.properties
@@ -12,6 +12,6 @@ spring.cache.redis.time-to-live=3600000
 # 这有助于防止键名冲突，并使缓存更具可读性。
 spring.cache.redis.use-key-prefix=true
 
-# 允许缓存null值。设置为true表示Redis缓存可以存储null值的条目。
+# 允许缓存null值。设置为true表示Redis缓存可以存储null值的条目，防止缓存穿透
 # 这可以根据具体需求配置，有些场景可能不需要缓存null值。
 spring.cache.redis.cache-null-values=true
