--- a/gulimall-search/src/main/resources/application.properties
+++ b/gulimall-search/src/main/resources/application.properties
@@ -5,4 +5,6 @@ spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 
 spring.application.name=gulimall-search
 
+spring.thymeleaf.cache=false
 server.port=12000
+
