--- a/gulimall-search/pom.xml
+++ b/gulimall-search/pom.xml
@@ -22,7 +22,7 @@
     <properties>
         <java.version>1.8</java.version>
         <elasticsearch.version>7.4.2</elasticsearch.version>
-        <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
+        <spring-cloud.version>Greenwich.SR3</spring-cloud.version> <!-- 指定Spring Cloud版本 -->
     </properties>
 
 
@@ -68,11 +68,11 @@
 <!--            <artifactId>spring-boot-devtools</artifactId>-->
 <!--        </dependency>-->
 
-<!--        &lt;!&ndash; OpenFeign服务调用依赖 &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.cloud</groupId>-->
-<!--            <artifactId>spring-cloud-starter-openfeign</artifactId>-->
-<!--        </dependency>-->
+        <!-- OpenFeign服务调用依赖 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
 
 <!--        &lt;!&ndash; Redis整合SpringSession，用于会话管理 &ndash;&gt;-->
 <!--        <dependency>-->
